# libRationel

./: README.md
libRatio/: CMakeList.txt  CMakeLists.txt  README.md
libRatio/myCode/: CMakeList.txt  CMakeLists.txt
libRatio/myCode/src/: main.cpp
libRatio/myExample/: CMakeLists.txt
libRatio/myExample/src/: main.cpp
libRatio/myLib/: CMakeList.txt  CMakeLists.txt  README.md
libRatio/myLib/doc/: CMakeList.txt
libRatio/myLib/include/: RatioMethods.hpp  RatioOperators.hpp  Rational.hpp
libRatio/myLib/src/: Rational.cpp
libRatio/myTest/: CMakeList.txt  CMakeLists.txt
libRatio/myTest/src/: sample_test.cpp
libRationel/myLib/: README.md
libRationel/myLib/src/: Rationnels.cpp
report/: README.md
